--- a/containers/docker-compose-all.yml
+++ b/containers/docker-compose-all.yml
@@ -46,25 +46,25 @@ services:
 # MySQL > Relational Database
 #
  mysql:
-  image: mysql:5.6.26
+  image: mysql:5.7
   environment:
    - MYSQL_ROOT_PASSWORD=admin
    - MYSQL_DATABASE=mc2pd
   ports:
-    - "3306:3306"
+   - "3306:3306"
+  volumes:
    - /volumes/mysql/:/var/lib/mysql
 #
 # KeyCloak > Authentication and Authorization
 #
- keycloak:
-  build:
-    context: ./keycloak
-    container_name: keycloak
-    environment:
-      - KEYCLOAK_USER: admin
-      - KEYCLOAK_PASSWORD: admin
-    ports:
-      - 8282:8080
-      - 8383:8443
-    volumes:
-      - ./volumes/keycloak:/opt/jboss/keycloak/standalone/data
+# keycloak:
+#  context: ./keycloak
+#  container_name: keycloak
+#  environment:
+#    - KEYCLOAK_USER: admin
+#    - KEYCLOAK_PASSWORD: admin
+#  ports:
+#    - 8282:8080
+#    - 8383:8443
+#  volumes:
+#    - ./volumes/keycloak:/opt/jboss/keycloak/standalone/data
