--- a/containers/docker-compose-apps.yml
+++ b/containers/docker-compose-apps.yml
@@ -1,27 +1,8 @@
 version: '2.1'
 services:
-#
-# Consul > Service Discovery and Repository
-#
- consul1:
-  image: "progrium/consul"
-  restart: always
-  container_name: "consul1"
-  hostname: "consul1"
-  volumes:
-   - data_volume:/volumes/data/consul
-   - config_volume:/volumes/config/consul
-  ports:
-   - "8300:8300"
-   - "8400:8400"
-   - "8500:8500"
-   - "8600:8600"
-  command: "-server -bootstrap -ui-dir /ui -join=127.0.0.1 "
-#
-# Finder
-#
+# MC2PD - Finder
  finder:
-  build: ./finder
+  build: ./applications/finder
   image: eduardomioto/finder
   ports:
    - "9090:9090"
@@ -33,21 +14,9 @@ services:
    - "neo4j"
   environment:
    - "SPRING_PROFILES_ACTIVE=dev"
-#
-# Neo4J > Graph Database
-#
- neo4j:
-  image: library/neo4j
-  ports:
-   - "7474:7474"
-   - "7687:7687"
-  volumes:
-   - data_volume:/volumes/data/neo4j
-#
-# Visualizer
-#
+# MC2PD - Visualizer
  visualizer:
-  build: ./visualizer
+  build: ./applications/visualizer
   image: eduardomioto/visualizer
   ports:
    - "7000:7000"
@@ -58,15 +27,70 @@ services:
   environment:
    - "FINDER_URL=finder"
    - "NGINX_PORT=80"
+# MC2PD - Specialist Opinion
+ specialist-opinion:
+  build: ./applications/specialist-opinion
+  image: eduardomioto/specialist-opinion
+  ports:
+   - "9001:8080"
+  links:
+   - "consul1"
+  depends_on:
+   - "finder"
+  environment:
+   - "FINDER_URL=finder"
+   - "NGINX_PORT=80"
 #
-# Zipkin
+# MC2PD - Architecture Probe
+#
+ architecture-probe:
+  build: ./applications/architecture-probe
+  image: eduardomioto/architecture-probe
+  ports:
+   - "9001:8080"
+  links:
+   - "consul1"
+  depends_on:
+   - "finder"
+  environment:
+   - "FINDER_URL=finder"
+   - "NGINX_PORT=80"
+#
+# Service - Consul > Service Discovery and Repository
+#
+ consul1:
+  image: "progrium/consul"
+  restart: always
+  container_name: "consul1"
+  hostname: "consul1"
+  volumes:
+   - ./volumes/consul/data:/volumes/data/consul
+   - ./volumes/consul/config:/volumes/config/consul
+  ports:
+   - "8300:8300"
+   - "8400:8400"
+   - "8500:8500"
+   - "8600:8600"
+  command: "-server -bootstrap -ui-dir /ui -join=127.0.0.1 "
+#
+# Service - Neo4J > Graph Database
+#
+ neo4j:
+  image: library/neo4j
+  ports:
+   - "7474:7474"
+   - "7687:7687"
+  volumes:
+   - /volumes/neo4j/:/data/dbms
+#
+# Service - Zipkin > Open Tracing
 #
  zipkin:
   image: "openzipkin/zipkin"
   ports:
    - "9411:9411"
 #
-# Access Manager > Java Microservice
+# Simulated Microservices - Access Manager > Java Microservice
 #
  accessmanager:
   build: ./applications/simulated/java/microservice-access-manager-rest
@@ -82,7 +106,7 @@ services:
     - "SPRING_PROFILES_ACTIVE=dev"
   mem_limit: 1024m
 #
-# Rest Basket > Java Microservice
+# Simulated Microservices -  Basket > Java Microservice
 #
  basket:
   build: ./applications/simulated/java/microservice-basket-rest
@@ -96,8 +120,9 @@ services:
    - "consul1"
   environment:
     - "SPRING_PROFILES_ACTIVE=dev"
+  mem_limit: 1024m
 #
-# Rest Billing > Java Microservice
+# Simulated Microservices -  Billing > Java Microservice
 #
  basket:
   build: ./applications/simulated/java/microservice-billing-rest
@@ -111,8 +136,9 @@ services:
    - "consul1"
   environment:
     - "SPRING_PROFILES_ACTIVE=dev"
+  mem_limit: 1024m
 #
-# Fare Product > Java Microservice
+# Simulated Microservices - Fare Product > Java Microservice
 #
  fare:
   build: ./applications/simulated/java/microservice-fare-rest
@@ -126,7 +152,7 @@ services:
    - "SPRING_PROFILES_ACTIVE=dev"
   mem_limit: 1024m
 #
-# Inventory > Java Microservice
+# Simulated Microservices - Inventory > Java Microservice
 #
  inventory:
   build: ./applications/simulated/java/microservice-inventory-rest
@@ -142,7 +168,7 @@ services:
     - "SPRING_PROFILES_ACTIVE=dev"
   mem_limit: 1024m
 #
-# Order > Java Microservice
+# Simulated Microservices - Order > Java Microservice
 #
  order:
   build: ./applications/simulated/java/microservice-order-rest
@@ -158,7 +184,7 @@ services:
     - "SPRING_PROFILES_ACTIVE=dev"
   mem_limit: 1024m
 #
-# Product > Java Microservice
+# Simulated Microservices - Product > Java Microservice
 #
  product:
   build: ./applications/simulated/java/microservice-product-rest
@@ -174,7 +200,7 @@ services:
   mem_limit: 1024m
 
 #
-# User Manager > Java Microservice
+# Simulated Microservices - User Manager > Java Microservice
 #
  usermanager:
   build: ./applications/simulated/java/microservice-user-manager-rest
@@ -190,10 +216,10 @@ services:
     - "SPRING_PROFILES_ACTIVE=dev"
   mem_limit: 1024m
 #
-# Rest Newsletter > Java Microservice
+# Simulated Microservices -  Newsletter > Java Microservice
 #
  newsletter:
-  build: ./rest-newsletter
+  build: ./applications/simulated/node/microservice-newsletter-rest
   image: eduardomioto/rest-newsletter
   restart: always
   ports:
@@ -203,12 +229,12 @@ services:
   depends_on:
    - consul1
   environment:
-   - CONSUL_URL: consul1
+    CONSUL_URL: consul1
 #
-# Rest Banner > Node Microservice
+# Simulated Microservices -  Banner > NodeJS Microservice
 #
  banner:
-  build: ./rest-banner
+  build: ./applications/simulated/node/microservice-banner-rest
   image: eduardomioto/rest-banner
   restart: always
   ports:
@@ -218,27 +244,12 @@ services:
   depends_on:
    - consul1
   environment:
-   - CONSUL_URL: consul1
+   CONSUL_URL: consul1
 #
-# Rest Billing > Node Microservice
-#
- billing:
-  build: ./rest-billing
-  image: eduardomioto/rest-billing
-  restart: always
-  ports:
-   - "3001:3001"
-  links:
-   - "consul1"
-  depends_on:
-   - consul1
-  environment:
-   - CONSUL_URL: consul1
-#
-# Rest Calendar > Node Microservice
+# Simulated Microservices -  Calendar > NodeJS Microservice
 #
  calendar:
-  build: ./rest-calendar
+  build: ./applications/simulated/node/microservice-calendar-rest
   image: eduardomioto/rest-calendar
   restart: always
   ports:
@@ -248,12 +259,12 @@ services:
   depends_on:
    - consul1
   environment:
-   - CONSUL_URL: consul1
+   CONSUL_URL: consul1
 #
-# Rest Category > Node Microservice
+# Simulated Microservices -  Category > NodeJS Microservice
 #
  category:
-  build: ./rest-category
+  build: ./applications/simulated/node/microservice-category-rest
   image: eduardomioto/rest-category
   restart: always
   ports:
@@ -263,12 +274,12 @@ services:
   depends_on:
    - consul1
   environment:
-   - CONSUL_URL: consul1
+   CONSUL_URL: consul1
 #
-# Rest Mail-Relay > Node Microservice
+# Simulated Microservices -  Mail-Relay > NodeJS Microservice
 #
  mailrelay:
-  build: ./rest-mail-relay
+  build: ./applications/simulated/node/microservice-mail-relay-rest
   image: eduardomioto/rest-mail-relay
   restart: always
   ports:
@@ -278,12 +289,12 @@ services:
   depends_on:
    - consul1
   environment:
-   - CONSUL_URL: consul1
+   CONSUL_URL: consul1
 #
-# Rest Postal Code > Microservice
+# Simulated Microservices -  Postal Code > NodeJS Microservice
 #
  postalcode:
-  build: ./rest-postalcode
+  build: ./applications/simulated/node/microservice-postalcode-rest
   image: eduardomioto/rest-postalcode
   restart: always
   ports:
@@ -295,10 +306,10 @@ services:
   environment:
    CONSUL_URL: consul1
 #
-# Rest Supplier > Node Microservice
+# Simulated Microservices -  Supplier > NodeJS Microservice
 #
  supplier:
-  build: ./rest-supplier
+  build: ./applications/simulated/node/microservice-supplier-rest
   image: eduardomioto/rest-supplier
   restart: always
   ports:
@@ -308,12 +319,12 @@ services:
   depends_on:
    - consul1
   environment:
-   - CONSUL_URL: consul1
+   CONSUL_URL: consul1
 #
-# Rest Benefits > Node Microservice
+# Simulated Microservices -  Benefits > NodeJS Microservice
 #
  benefits:
-  build: ./rest-benefits
+  build: ./applications/simulated/node/microservice-benefits-rest
   image: eduardomioto/rest-benefits
   restart: always
   ports:
