--- a/containers/applications/architecture-probe/Dockerfile
+++ b/containers/applications/architecture-probe/Dockerfile
@@ -5,6 +5,6 @@ ENV JAVA_HOME              /usr/lib/jvm/java-8-openjdk-amd64
 ENV PATH                   $PATH:$JAVA_HOME/bin
 
 WORKDIR /app
-COPY ./finder-1.0.0.jar /app/app.jar
+COPY ./architecture-probe-1.0.0.jar /app/app.jar
 
 CMD ["/bin/sh", "-c", "java -Dspring.profiles.active=dev -jar /app/app.jar"]
