--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -1,13 +1,67 @@
 version: '2.1'
 services:
+# MC2PD - Finder
+ finder:
+  build: ./applications/finder
+  image: eduardomioto/finder
+  ports:
+   - "9090:9090"
+  links:
+   - "consul"
+   - "neo4j"
+  depends_on:
+   - "consul"
+   - "neo4j"
+  environment:
+   - "SPRING_PROFILES_ACTIVE=dev"
+# MC2PD - Visualizer
+ visualizer:
+  build: ./applications/visualizer
+  image: eduardomioto/visualizer
+  ports:
+   - "7000:7000"
+  links:
+   - "consul"
+  depends_on:
+   - "finder"
+  environment:
+   - "FINDER_URL=finder"
+   - "NGINX_PORT=80"
+# MC2PD - Specialist Opinion
+ specialist-opinion:
+  build: ./applications/specialist-opinion
+  image: eduardomioto/specialist-opinion
+  ports:
+   - "10010:8080"
+  links:
+   - "consul"
+  depends_on:
+   - "consul"
+  environment:
+   - "SPRING_PROFILES_ACTIVE=dev"
 #
-# Consul > Service Discovery and Repository
+# MC2PD - Architecture Probe
 #
- consul1:
+ architecture-probe:
+  build: ./applications/architecture-probe
+  image: eduardomioto/architecture-probe
+  ports:
+   - "9001:8080"
+  links:
+   - "consul"
+  depends_on:
+   - "finder"
+  environment:
+   - "FINDER_URL=finder"
+   - "NGINX_PORT=80"
+#
+# Service - Consul > Service Discovery and Repository
+#
+ consul:
   image: "progrium/consul"
   restart: always
-  container_name: "consul1"
-  hostname: "consul1"
+  container_name: "consul"
+  hostname: "consul"
   volumes:
    - ./volumes/consul/data:/volumes/data/consul
    - ./volumes/consul/config:/volumes/config/consul
@@ -18,7 +72,7 @@ services:
    - "8600:8600"
   command: "-server -bootstrap -ui-dir /ui -join=127.0.0.1 "
 #
-# Neo4J > Graph Database
+# Service - Neo4J > Graph Database
 #
  neo4j:
   image: library/neo4j
@@ -28,18 +82,243 @@ services:
   volumes:
    - /volumes/neo4j/:/data/dbms
 #
-# Zipkin > Open Tracing
+# Service - Zipkin > Open Tracing
 #
  zipkin:
   image: "openzipkin/zipkin"
   ports:
    - "9411:9411"
- zipkin-ui:
-  image: openzipkin/zipkin-ui
-  environment:
-    # Change this if connecting to a different zipkin server
-    - ZIPKIN_BASE_URL=http://zipkin:9411
+#
+# Simulated Microservices - Access Manager > Java Microservice
+#
+ access-manager:
+  build: ./applications/simulated/java/microservice-access-manager-rest
+  image: eduardomioto/rest-access-manager
   ports:
-    - 80:80
+   - "8091:8091"
+  links:
+   - "consul"
   depends_on:
-    - zipkin
+   - "consul"
+  environment:
+    - "SPRING_PROFILES_ACTIVE=dev"
+  mem_limit: 1024m
+#
+# Simulated Microservices -  Basket > Java Microservice
+#
+ basket:
+  build: ./applications/simulated/java/microservice-basket-rest
+  image: eduardomioto/rest-basket
+  ports:
+   - "8095:8095"
+  links:
+   - "consul"
+  depends_on:
+   - "consul"
+  environment:
+    - "SPRING_PROFILES_ACTIVE=dev"
+  mem_limit: 1024m
+#
+# Simulated Microservices -  Billing > Java Microservice
+#
+ basket:
+  build: ./applications/simulated/java/microservice-billing-rest
+  image: eduardomioto/rest-billing
+  ports:
+   - "8095:8095"
+  links:
+   - "consul"
+  depends_on:
+   - "consul"
+  environment:
+    - "SPRING_PROFILES_ACTIVE=dev"
+  mem_limit: 1024m
+#
+# Simulated Microservices - Fare Product > Java Microservice
+#
+ fare:
+  build: ./applications/simulated/java/microservice-fare-rest
+  image: eduardomioto/rest-fare
+  ports:
+   - "8090:8090"
+  links:
+   - "consul"
+  environment:
+   - "SPRING_PROFILES_ACTIVE=dev"
+  mem_limit: 1024m
+#
+# Simulated Microservices - Inventory > Java Microservice
+#
+ inventory:
+  build: ./applications/simulated/java/microservice-inventory-rest
+  image: eduardomioto/rest-inventory
+  ports:
+   - "8092:8092"
+  links:
+   - "consul"
+  depends_on:
+   - "consul"
+  environment:
+    - "SPRING_PROFILES_ACTIVE=dev"
+  mem_limit: 1024m
+#
+# Simulated Microservices - Order > Java Microservice
+#
+ order:
+  build: ./applications/simulated/java/microservice-order-rest
+  image: eduardomioto/rest-order
+  ports:
+   - "8093:8093"
+  links:
+   - "consul"
+  depends_on:
+   - "consul"
+  environment:
+    - "SPRING_PROFILES_ACTIVE=dev"
+  mem_limit: 1024m
+#
+# Simulated Microservices - Product > Java Microservice
+#
+ product:
+  build: ./applications/simulated/java/microservice-product-rest
+  image: eduardomioto/rest-product
+  ports:
+   - "8080:8080"
+  depends_on:
+   - "consul"
+   - "fare"
+  environment:
+    - "SPRING_PROFILES_ACTIVE=dev"
+  mem_limit: 1024m
+
+#
+# Simulated Microservices - User Manager > Java Microservice
+#
+ user-manager:
+  build: ./applications/simulated/java/microservice-user-manager-rest
+  image: eduardomioto/rest-user-manager
+  ports:
+   - "8094:8094"
+  links:
+   - "consul"
+  depends_on:
+   - "consul"
+  environment:
+    - "SPRING_PROFILES_ACTIVE=dev"
+  mem_limit: 1024m
+#
+# Simulated Microservices -  Newsletter > Java Microservice
+#
+ newsletter:
+  build: ./applications/simulated/node/microservice-newsletter-rest
+  image: eduardomioto/rest-newsletter
+  ports:
+   - "3004:3004"
+  links:
+   - "consul"
+  depends_on:
+   - consul
+  environment:
+    CONSUL_URL: consul
+#
+# Simulated Microservices -  Banner > NodeJS Microservice
+#
+ banner:
+  build: ./applications/simulated/node/microservice-banner-rest
+  image: eduardomioto/rest-banner
+  ports:
+   - "3006:3006"
+  links:
+   - "consul"
+  depends_on:
+   - consul
+  environment:
+   CONSUL_URL: consul
+#
+# Simulated Microservices -  Calendar > NodeJS Microservice
+#
+ calendar:
+  build: ./applications/simulated/node/microservice-calendar-rest
+  image: eduardomioto/rest-calendar
+  ports:
+   - "3002:3002"
+  links:
+   - "consul"
+  depends_on:
+   - consul
+  environment:
+   CONSUL_URL: consul
+#
+# Simulated Microservices -  Category > NodeJS Microservice
+#
+ category:
+  build: ./applications/simulated/node/microservice-category-rest
+  image: eduardomioto/rest-category
+  ports:
+   - "3007:3007"
+  links:
+   - "consul"
+  depends_on:
+   - consul
+  environment:
+   CONSUL_URL: consul
+#
+# Simulated Microservices -  Mail-Relay > NodeJS Microservice
+#
+ mailrelay:
+  build: ./applications/simulated/node/microservice-mail-relay-rest
+  image: eduardomioto/rest-mail-relay
+  ports:
+   - "3003:3003"
+  links:
+   - "consul"
+  depends_on:
+   - consul
+  environment:
+   CONSUL_URL: consul
+#
+# Simulated Microservices -  Postal Code > NodeJS Microservice
+#
+ postalcode:
+  build: ./applications/simulated/node/microservice-postalcode-rest
+  image: eduardomioto/rest-postalcode
+  ports:
+   - "3000:3000"
+  links:
+   - "consul"
+  depends_on:
+   - consul
+  environment:
+   CONSUL_URL: consul
+#
+# Simulated Microservices -  Supplier > NodeJS Microservice
+#
+ supplier:
+  build: ./applications/simulated/node/microservice-supplier-rest
+  image: eduardomioto/rest-supplier
+  ports:
+   - "3010:3010"
+  links:
+   - "consul"
+  depends_on:
+   - consul
+  environment:
+   CONSUL_URL: consul
+#
+# Simulated Microservices -  Benefits > NodeJS Microservice
+#
+ benefits:
+  build: ./applications/simulated/node/microservice-benefits-rest
+  image: eduardomioto/rest-benefits
+  ports:
+   - "3009:3009"
+  links:
+   - "consul"
+  depends_on:
+   - consul
+  environment:
+   CONSUL_URL: consul
+networks:
+  default:
+    external:
+      name: mc2pd
