--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -6,7 +6,7 @@ services:
    container_name: finder
    restart: always
    ports:
-     - 9090:9090
+     - 19100:19100
    links:
      - "consul"
      - "neo4j"
@@ -22,14 +22,16 @@ services:
     container_name: visualizer
     restart: on-failure
     ports:
-      - 7000:7000
+      - 7000:80
     links:
       - "consul"
+      - "finder"
     depends_on:
       - "finder"
     environment:
-      - "FINDER_URL=finder"
       - "NGINX_PORT=80"
+    volumes:  
+      - ./volumes/visualizer/:/usr/share/nginx/html
   specialist_opinion:
     build:
       context: ./applications/specialist-opinion
@@ -196,7 +198,7 @@ services:
     container_name: newsletter
     restart: on-failure
     ports:
-      - "3004:3004"
+      - "10011:10011"
     links:
       - "consul"
     depends_on:
@@ -210,7 +212,7 @@ services:
     container_name: banner
     restart: on-failure
     ports:
-      - "3006:3006"
+      - "10002:10002"
     links:
       - "consul"
     depends_on:
@@ -223,7 +225,7 @@ services:
     image: eduardomioto/rest-calendar
     container_name: calendar
     ports:
-      - "3002:3002"
+      - "10006:10006"
     links:
       - "consul"
     depends_on:
@@ -236,7 +238,7 @@ services:
     image: eduardomioto/rest-category
     container_name: category
     ports:
-      - "3007:3007"
+      - "10007:10007"
     links:
       - "consul"
     depends_on:
@@ -249,7 +251,7 @@ services:
     image: eduardomioto/rest-mail-relay
     container_name: mail_relay
     ports:
-      - "3003:3003"
+      - "10010:10010"
     links:
       - "consul"
     depends_on:
@@ -263,7 +265,7 @@ services:
     container_name: postal_code
     restart: on-failure
     ports:
-      - "3000:3000"
+      - "10013:10013"
     links:
       - "consul"
     depends_on:
@@ -276,7 +278,7 @@ services:
     image: eduardomioto/rest-supplier
     container_name: supplier
     ports:
-      - "3010:3010"
+      - "10016:10016"
     links:
       - "consul"
     depends_on:
@@ -290,7 +292,7 @@ services:
     container_name: benefits
     restart: on-failure
     ports:
-      - "3009:3009"
+      - "10004:10004"
     links:
       - "consul"
     depends_on:
