--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -26,8 +26,10 @@ services:
     links:
       - "consul"
       - "finder"
+      - "specialist_opinion"      
     depends_on:
       - "finder"
+      - "specialist_opinion"
     environment:
       - "NGINX_PORT=80"
     volumes:  
