--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -301,6 +301,75 @@ services:
       - consul
     environment:
       - CONSUL_URL=consul
+  #acabd57e73d5c90b2970ceb792790df34993f59a    
+  sonarqube:
+    build:
+      context: ./applications/sonar
+    restart: unless-stopped
+    container_name: sonarqube
+  #  command: -Dhttp.proxyHost=proxy.whebdc.com.br -Dhttp.proxyPort=3128 -Dhttp.proxyUser=topologia -Dhttp.proxyPassword=Philips.2017
+    environment:
+      - SONARQUBE_JDBC_USERNAME=sonar
+      - SONARQUBE_JDBC_PASSWORD=v07IGCFCF83Z95NX
+      - SONARQUBE_JDBC_URL=jdbc:postgresql://postgres:5432/sonarqube
+    ports:
+      - "9000:9000"
+      - "9092:9092"
+    volumes:
+      - ./volumes/sonarqube/conf:/opt/sonarqube/conf
+      - ./volumes/sonarqube/data:/opt/sonarqube/data
+      - ./volumes/sonarqube/extensions:/opt/sonarqube/extensions
+      - ./volumes/sonarqube/plugins:/opt/sonarqube/lib/bundled-plugins
+  postgres:
+    image: postgres:10.1
+    restart: unless-stopped
+    container_name: postgres
+    environment:
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=v07IGCFCF83Z95NX
+      - POSTGRES_DB=sonarqube
+    volumes:
+      # - volumes/postgres/:/var/lib/postgresql
+      # This needs explicit mapping due to https://github.com/docker-library/postgres/blob/4e48e3228a30763913ece952c611e5e9b95c8759/Dockerfile.template#L52
+      -  ./volumes/postgres/:/var/lib/postgresql/data
+  influxdb:
+    build: 
+      context: ./applications/influxdb
+    container_name: influxdb
+    env_file: configuration.env
+    ports:
+      - 8086:8086
+      - 8083:8083
+      - 2003:2003
+    volumes:
+      - ./volumes/influxdb:/var/lib/influxdb
+  telegraf:
+    build: 
+      context: ./applications/telegraf
+    container_name: telegraf
+    image: telegraf
+    restart: always
+    environment:
+      HOST_PROC: /rootfs/proc
+      HOST_SYS: /rootfs/sys
+      HOST_ETC: /rootfs/etc
+    hostname: localhost
+    volumes:
+     - ./volumes/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+     - /var/run/docker.sock:/var/run/docker.sock:ro
+     - /sys:/rootfs/sys:ro
+     - /proc:/rootfs/proc:ro
+     - /etc:/rootfs/etc:ro
+  prometheus:
+    build: 
+      context: ./applications/prometheus
+    container_name: prometheus
+    ports:
+      - 8091:9090
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml   
+    depends_on:
+      - telegraf
 networks:
   default:
     external:
